--- a/ConferencesBook/session-1-rare-diseases-in-korea-status-research-experiences.html
+++ b/ConferencesBook/session-1-rare-diseases-in-korea-status-research-experiences.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="observational-study-pitfall-.html">
-<link rel="next" href="-.html">
+<link rel="prev" href="mfds-asan-joint-symposium-on-rare-diseases-2016.html">
+<link rel="next" href="session-2-global-regulatory-experiences-in-orphan-drug-development.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -163,64 +163,24 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="diagnostic-test-biomarker-study" class="section level2">
-<h2><span class="header-section-number">4.3</span> Diagnostic test &amp; Biomarker Study</h2>
+<div id="session-1-rare-diseases-in-korea-status-research-experiences" class="section level2">
+<h2><span class="header-section-number">6.1</span> Session 1 Rare diseases in Korea : Status &amp; Research experiences</h2>
+<div id="national-support-for-rare-disease-current-status-and-future-prospects" class="section level3">
+<h3><span class="header-section-number">6.1.1</span> National support for rare disease : Current status and future prospects</h3>
+<p>Speaker : Hyun-Young Park, M.D., Ph.D. Centers for Disease Control and Prevention</p>
 <ul>
-<li>Speaker: 박성호 - 영상의학과</li>
-</ul>
-<div id="contents---diagnostic-test" class="section level3">
-<h3><span class="header-section-number">4.3.1</span> Contents - Diagnostic test</h3>
-<ul>
-<li>DTA sutdy</li>
-<li>Prevalence낮으면</li>
-<li>횡으로 본다. Predictive Value - Prevalence에 영향을 받는다. Pre올라가면 PPV올라가. NPV낮아져.</li>
-<li>odds ratio - prevalence에 영향을 안받는다. intrinsic parameter로 많이 씀.</li>
-<li>case-control study vs cross-sectional study [옛날 용어]</li>
-<li>Cochrane - case-control type accuracy study vs cohort type accuracy study</li>
-<li>NECA - diagnostic case-control study vs diagnostic cohort study</li>
-<li>Area under ROC curve - C statistics</li>
-<li>Youden index - sens spec 더해서 빼기 1 Youden J statistic</li>
-<li>Least Euclidean distance from (0,1) 거리가 최소되는 점. - 쉬운개념</li>
-<li>diagnostic accuracy - 시각적으로 어떻게 구성하는지가 중요함.</li>
-<li>McNemar test</li>
-<li>Comparing two proportions (2x2) - unpaired(fisher,Chi2), paired (McNemar)</li>
+<li>Orphan disease</li>
+<li>Disease criteria : EU 5/10000, US &lt;200k, japan &lt;50k, WHO &lt;6.5-10/10k, 유병인구 &lt;20k</li>
+<li>희귀성 : market failure</li>
+<li>2012 유전자 진단지원, 2016 희귀질환 종합대책</li>
+<li>희귀 난치성질환 전문정보 - helpline</li>
+<li>IRDiRC</li>
+<li>정부지원사업의 문제점</li>
 </ul>
 </div>
-<div id="contents---biomarker" class="section level3">
-<h3><span class="header-section-number">4.3.2</span> Contents - Biomarker</h3>
-<ul>
-<li>Biomarker
-<ul>
-<li>Classifier / Prognostic / Predictive / Monitoring</li>
-</ul></li>
-<li>Petal et al. MRI-detected tumor response for locally advanced rectal cancer predicts survival outcomes</li>
-<li>Machtay et al. Prediction of survival
-<ul>
-<li>Prospective</li>
-<li>S III lung cancer eligible for CCRT</li>
-<li>Endpoint : overall survival</li>
-<li>SUV</li>
-</ul></li>
-<li>Hylton et al.
-<ul>
-<li>Prospective</li>
-<li>Index: functional tumor volume measured with pre-surgery breast MRI</li>
-<li>Comparator: post-surgical pathologic complete response(PCR)</li>
-<li>Modified C-statistics(ROC) - diagnosis는 있다 없다로 나온다. survival은 time to event - 각각의 time point마다 diagnosis 유사한 통계량이 나와서 그걸 summation</li>
-</ul></li>
-<li>Studies of predictive accuracy
-<ul>
-<li>Two approaches - Time-to-event / event by a fixed time</li>
-<li>Event by a fixed time - Sn Sp ROC - Accuracy study와 유사한 것으로 된다.</li>
-</ul></li>
-<li>더 impact있는 것. - randomization을 테스트 후에 할 것인가 아니면 전에 할 것인가? 전에 하는 것이 더 임팩트 있다. 왜냐하면 테스트(+)이면 치료 들어가는 경우가 많기 때문이다.</li>
-<li>후자에 해당하는 (더 임팩트있는) 스터디의 예.</li>
-<li>Monitoring biomarker
-<ul>
-<li>Correlation between x and y / delta x and delta y</li>
-<li>Delta를 보는 것이 중요하다.</li>
-</ul></li>
-</ul>
+<div id="translational-research-for-drug-development-historical-perspective" class="section level3">
+<h3><span class="header-section-number">6.1.2</span> Translational research for drug development : Historical perspective</h3>
+<p>Speaker : Seung-Eun Choi, M.D., Ph.D. Ministry of Food and Drug Safety - TM - History not so long 2004 - T1(testing in humans), T2</p>
 </div>
 </div>
             </section>
@@ -228,8 +188,8 @@ MathJax.Hub.Config({
           </div>
         </div>
       </div>
-<a href="observational-study-pitfall-.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="-.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="mfds-asan-joint-symposium-on-rare-diseases-2016.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="session-2-global-regulatory-experiences-in-orphan-drug-development.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -256,7 +216,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-06-24-ACREP.rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-07-14-MFDS.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
