--- a/ConferencesBook/session-1-rare-diseases-in-korea-status-research-experiences.html
+++ b/ConferencesBook/session-1-rare-diseases-in-korea-status-research-experiences.html
@@ -138,7 +138,8 @@ MathJax.Hub.Config({
 <li class="chapter" data-level="6.1.2" data-path="session-1-rare-diseases-in-korea-status-research-experiences.html"><a href="session-1-rare-diseases-in-korea-status-research-experiences.html#translational-research-for-drug-development-historical-perspective"><i class="fa fa-check"></i><b>6.1.2</b> Translational research for drug development : Historical perspective</a></li>
 </ul></li>
 <li class="chapter" data-level="6.2" data-path="session-2-global-regulatory-experiences-in-orphan-drug-development.html"><a href="session-2-global-regulatory-experiences-in-orphan-drug-development.html"><i class="fa fa-check"></i><b>6.2</b> Session 2 Global regulatory experiences in orphan drug development</a><ul>
-<li class="chapter" data-level="6.2.1" data-path="session-2-global-regulatory-experiences-in-orphan-drug-development.html"><a href="session-2-global-regulatory-experiences-in-orphan-drug-development.html#considerations-for-drug-development-for-rare-diseases"><i class="fa fa-check"></i><b>6.2.1</b> Considerations for drug development for rare diseases :</a></li>
+<li class="chapter" data-level="6.2.1" data-path="session-2-global-regulatory-experiences-in-orphan-drug-development.html"><a href="session-2-global-regulatory-experiences-in-orphan-drug-development.html#considerations-for-drug-development-for-rare-diseases-cases-of-inborn-errors-of-metabolism"><i class="fa fa-check"></i><b>6.2.1</b> Considerations for drug development for rare diseases : Cases of inborn errors of metabolism</a></li>
+<li class="chapter" data-level="6.2.2" data-path="session-2-global-regulatory-experiences-in-orphan-drug-development.html"><a href="session-2-global-regulatory-experiences-in-orphan-drug-development.html#role-of-pharmacometrics-in-the-development-of-orphan-drugs"><i class="fa fa-check"></i><b>6.2.2</b> Role of pharmacometrics in the development of orphan drugs</a></li>
 </ul></li>
 <li class="chapter" data-level="6.3" data-path="session-3-lessons-and-learned-rd-for-rare-disease.html"><a href="session-3-lessons-and-learned-rd-for-rare-disease.html"><i class="fa fa-check"></i><b>6.3</b> Session 3 Lessons and learned : R&amp;D for rare disease</a></li>
 <li class="chapter" data-level="6.4" data-path="session-4-asan-initia-tives-for-rare-disease.html"><a href="session-4-asan-initia-tives-for-rare-disease.html"><i class="fa fa-check"></i><b>6.4</b> Session 4 Asan initia tives for rare disease</a></li>
@@ -180,7 +181,11 @@ MathJax.Hub.Config({
 </div>
 <div id="translational-research-for-drug-development-historical-perspective" class="section level3">
 <h3><span class="header-section-number">6.1.2</span> Translational research for drug development : Historical perspective</h3>
-<p>Speaker : Seung-Eun Choi, M.D., Ph.D. Ministry of Food and Drug Safety - TM - History not so long 2004 - T1(testing in humans), T2</p>
+<p>Speaker : Seung-Eun Choi, M.D., Ph.D. Ministry of Food and Drug Safety</p>
+<ul>
+<li>TM - History not so long 2004</li>
+<li>T1(testing in humans), T2</li>
+</ul>
 </div>
 </div>
             </section>
