deploy_2016_Drug_Development

--- a/ConferencesBook/-3.html
+++ b/ConferencesBook/-3.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-
-<link rel="next" href="section-2.html">
+<link rel="prev" href="section-2.html">
+<link rel="next" href="cancer-immunotherapy.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -218,14 +218,9 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="header">
-<h1 class="title">Conferences 2016</h1>
-<h4 class="author"><em>Sungpil Han</em></h4>
-<h4 class="date"><em>2016-10-02</em></h4>
-</div>
-<div id="introduction" class="section level1">
-<h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
-<p>Conferences mainly regarding clinical pharmacology, pharmacometrics and medicine will be summarized here.</p>
+<div id="-3" class="section level1">
+<h1><span class="header-section-number">Chapter 3</span> 심장내과 3부</h1>
+<p>[Mitral Valve Disease - Dx and Management - 김덕원(울산의대)] MR - 피가 역류하므로 좌심방 좌심실 커진다. 심부전 1차성 - 퇴행성, 류마틱, 선천적, 심내막염 | 2차성 초음파검사가 중요하다. 병기는 A/B/C/D - C/D는 SEVERE. Primary Severe MR - anatomy. Hemodynamics. LV enlargement. Echo for degenerative MR - myxomatous degeneration. ERO&gt;0.4cm^2 | LV EF&lt;60% MV repair - 사망률 줄였다. 64여 - known DM - Dyspnea(+) - 4MA - global hypokinesia (akinetic portion) - structurally normal - tethering (땡겨지는 현상) - Severe functional MR. ERO &gt;0.2cm^2 !!! 1차성은 적극적으로 치료, 수술 고려한다. 그렇다면 2차성은?? 여전히 수술 후 사망률이 높다. 좌심실이 중요한 예후인자이다. 수술후 생존률에 이득이 있지는 않아. 이득이 제한적임 !!! MS - natural hx. - 진행이 매우 느리다. INDOLENT. 좌심방에 PR. OVERLOAD - 그러나 심방세동이 발생하면 갑자기 안좋아지는 경우가 있다. 그러나 대체로 예후 좋다. 증상없으면 두고보는데 세동 생기는지 잘 관찰해야 한다. AFIB 생기면 STROKE생길 확률 매우 높아진다 (치료안하면 &gt;90%) PMV가능할 경우 PMBC- PERCU MITRAL BALLOON COMMISUROTOMY. 불가능할 경우… 증상없는 심한 MS. PMBC - Septal puncture- 가장 위험할 수 있다. hemopericardium생길 가능성이 있다. embolism. severe MR.등의 합병증이 생길 수 있다. 이미 혈전이 있으면! 하면 안된다. 합병증 줄이려면 - case operation experience가 중요하다 | patient selection 잘해야 한다. Early PMC [송종민 - Aortic Valve Ds - Dx and Mx] AS - ETIOLOGY - degenerattion. calcification. thickening. 열릴수가 없는 상태이다. bicuspid leaflet. Pr. gradient of as. 크면 클수록 AS심한거다. 요즘엔 도플러를 통해 버눌리 방정식으로 구한다. AV 속도가 중요한 위험인자. VERY SEVERE MS+LOW SURGICAL RISK - 미리 수술하는게 가능. !!! TAVI VS Medical Tx TAVI가 좋다 (PARTNER Trial) 2011 NEJM TAVR vs SAVR 차이 없다 - 요즘엔 CORE VALVE(Self expandable 늘어나는 신축성 있는거)로 해보니 TAVR이 모든 면에서 좋아! AR - 수치화 하는게 중요하다! 복부대동맥에서도 보이면 severe 수술 늦게하면 나쁘다.. 너무 늦게하면 좋지 않아. EF낮으면 예후 나쁨. LVESD낮으면 예후 나쁨. VASODILATOR (NIFEDIPINE) - 초기에는 좋다! - 이후엔 별 차이 없다. AR+HTN은 약물치료해야한다. 수술해야하는건 결국 고려해야 한다. [SCD Evaluation - 성균관대 박경민] 갑자기 쓰러짐. 왜 쓰러진걸까? Normal coronary일때 - 부정맥 전문의들에게 큰 문제가 생긴 것임. DDX OF SYNCOPE | CARDIAC 20%이상의 돌연사 확률 (1년 이내) EVALUATION - Hx. FHx. Drug- prolonging QT interval(cisapride, 초오aconitum - 한약 먹었는지 물어봐야) 돌연사의 가족력!!! -&gt; 미주신경성 (복부, 식은땀, 회복기때 구역, 서있을때 실신) vs 심장(누웠을때, 운동중) 비침습적 - EKG. precordial lead. - 전해질? | 초음파 HCMP, VHD, LV, ARVC/D | MR | HOLTER, EVENT RECORDER | Implantable event recorder(3년) 침습적 - cardiac cath. - spasm test(젊은 사람의 경우) EPS 유발시킬 수 있는가? 잘 안되는 경우도 20-30%된다. ㄱ브루가다 - Precordial lead ST가 자주 변하는 경우 증상: 실신 - 피지컬, 이미징 정상 - ECG - FLECAINIDE, PROCAINAMIDE - NA CHANNEL BLOCK. CURVED PATTERN이면 확진가능하다. SADDLEBACK PATTERN 이면 좀더 두고봐야한다. Long QT syndrome - QTc - RR interval QT/sqrt(RR interval) - 소타롤 등등, 420mm이상이면 롱. - 젊은 사람 - TdT 잘 생긴다. 롱큐티에서 TDT 잘 생길 수 있어. 저칼륨, 저마그네슘, 할돌 항고혈압제, 에리스로마이신 LQS 1 exercise(swimming) | 2(깜짝 놀랄때) | 3(잠자다가 실신) - 처방 : 베타블로커, 수영 덜해라. 약물 줄여라. BB - LQS 1,2에 잘 듣는다. 급사가족력. 젊은 남자. VTACHY. DC CARDIOVERSION 후 심전도에 찌글찌글 - ARVD/ARVC - SUDDEN CARDIAC DEATH가능함. EPSILON WAVE. ARVD진단기준. - 영상검사. BX - 도움된다. 심실 제세동기 삽입이 치료! 실신. 젊은 여자. 아무것도 안나와. 전기생리학적 검사 거부. 모니터 삽입. VT - 심실제세동기 삽입.</p>
 
 </div>
             </section>
@@ -233,8 +228,8 @@ MathJax.Hub.Config({
           </div>
         </div>
       </div>
-
-<a href="section-2.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="section-2.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="cancer-immunotherapy.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -261,7 +256,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/index.Rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-03-10-Cardiology.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
