--- a/ConferencesBook/-fda-.html
+++ b/ConferencesBook/-fda-.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-
-<link rel="next" href="section-2.html">
+<link rel="prev" href="bioimaging-2016-04-29.html">
+<link rel="next" href="kscpt.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -218,23 +218,47 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="header">
-<h1 class="title">Conferences 2016</h1>
-<h4 class="author"><em>Sungpil Han</em></h4>
-<h4 class="date"><em>2016-10-02</em></h4>
-</div>
-<div id="introduction" class="section level1">
-<h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
-<p>Conferences mainly regarding clinical pharmacology, pharmacometrics and medicine will be summarized here.</p>
+<div id="--fda---" class="section level1">
+<h1><span class="header-section-number">Chapter 6</span> 신약개발을 위한 FDA의 바이오이미징 표준화 프로그램 |</h1>
+<div id="-center-for-bioimaging-of-new-drug-development-amc" class="section level2">
+<h2><span class="header-section-number">6.1</span> 김정곤 Center for Bioimaging of New Drug Development AMC</h2>
+<ul>
+<li>Qualification</li>
+<li>왜 이미징바이오마커에 대해서 qualification 필요한가?</li>
+<li>Bioimaging의 논문수는 기하급수적으로 증가중</li>
+<li>누구나 인정가능한건가?</li>
+<li>Biomarker - a characteristics that is objectively measured and evaluated as an indicator of normal biological proc, pathogenic proc or pharmacologic responses to a therapeutic agent</li>
+<li>Surrogate endpoint - a biomarker that is intended to serve as a substitute for a clinical meaningful endpoint</li>
+<li>최종목표 correlated to clinical outcome</li>
+<li>Validation = reproducibility | 확산강조영상DWI - tumor에서 measure할 수 있나?</li>
+<li>Qualification = linking a biomarker with biological proc</li>
+<li>Trial investigators often do not know - where | what QC testing performed? | What sources of bias &amp; uncertainty in measurements</li>
+<li>Inadequate QC</li>
+<li>Inconsistencies in the imaging protocol</li>
+<li>FDA Drug Development Tools DDT Qualification Programs</li>
+<li><a href="http://www.fda.gov/Drugs/DevelopmentApprovalProcess/DrugDevelopmentToolsQualificationProgram/" class="uri">http://www.fda.gov/Drugs/DevelopmentApprovalProcess/DrugDevelopmentToolsQualificationProgram/</a></li>
+<li>CDER | CDRH - FDA에서 관장.</li>
+<li>OND - 약물 개발 과정의 규제 감독. 신약 판매 허가. 6개의 사무실로 구성</li>
+<li><a href="http://www.fda.gov/AboutFDA/CentersOffices/OfficeofMedicalProductsandTobacco/CDER/ucm184426.htm" class="uri">http://www.fda.gov/AboutFDA/CentersOffices/OfficeofMedicalProductsandTobacco/CDER/ucm184426.htm</a></li>
+<li>궁극적으로 encouraging</li>
+<li>Biomarker Qualification Program</li>
+<li><a href="http://www.fda.gov/Drugs/DevelopmentApprovalProcess/DrugDevelopmentToolsQualificationProgram/ucm284076.htm" class="uri">http://www.fda.gov/Drugs/DevelopmentApprovalProcess/DrugDevelopmentToolsQualificationProgram/ucm284076.htm</a></li>
+<li><a href="http://www.fda.gov/downloads/drugs/guidancecomplianceregulatoryinformation/guidances/ucm230597.pdf" class="uri">http://www.fda.gov/downloads/drugs/guidancecomplianceregulatoryinformation/guidances/ucm230597.pdf</a></li>
+<li>Qualification Process for Drug Development Tools APPENDIX 1: QUALIFICATION PROCESS</li>
+<li>European Medicine Agency | 일본에도 있다.</li>
+<li>Current Status of Imaging BQ 6/16 BQ submissions are on imaging biomarkers</li>
+<li></li>
+</ul>
 
+</div>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-
-<a href="section-2.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="bioimaging-2016-04-29.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="kscpt.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -261,7 +285,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/index.Rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-04-29-Bioimaging.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
