--- a/ConferencesBook/bioimaging-2016-04-29.html
+++ b/ConferencesBook/bioimaging-2016-04-29.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-
-<link rel="next" href="section-2.html">
+<link rel="prev" href="cancer-immunotherapy.html">
+<link rel="next" href="-fda-.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -218,23 +218,33 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="header">
-<h1 class="title">Conferences 2016</h1>
-<h4 class="author"><em>Sungpil Han</em></h4>
-<h4 class="date"><em>2016-10-02</em></h4>
-</div>
-<div id="introduction" class="section level1">
-<h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
-<p>Conferences mainly regarding clinical pharmacology, pharmacometrics and medicine will be summarized here.</p>
-
+<div id="bioimaging-2016-04-29" class="section level1">
+<h1><span class="header-section-number">Chapter 5</span> Bioimaging 2016-04-29</h1>
+<p>Lee, Hanmi | Value of Bioimaging for global drug development B-raf inhibitor | targeted inhibitor * Anatomic-functional-&gt;molecular(optical imaging, IVIS, SPECT, microMR,PET,CT * Bioimaging platform | PK, Imaging biomarkers, treatment effect, diagnostic tools * PD-1 | IHC system (digitalized and standardized) immune-oncology - PD-L1 expression - Pembrolizumab (MK-3475) - NSCLC * Pembrolizumab for the Treatment of Non–Small-Cell Lung Cancer <a href="http://www.nejm.org/doi/full/10.1056/NEJMoa1501824" class="uri">http://www.nejm.org/doi/full/10.1056/NEJMoa1501824</a> * Biomarker discovery - surrogate marker &amp; PK/PD * Human PK | exposure response PK-PD(Target engagement) | Exposure-safety [HM95573] BRAF-KRASmut inhibitor <a href="http://www.newstown.co.kr/news/articleView.html?idxno=185364" class="uri">http://www.newstown.co.kr/news/articleView.html?idxno=185364</a> 한미약품이 개발 중인 차세대 표적항암제 HM95573이 국내 1상 임상시험에 돌입한다.</p>
+<p>한미약품(대표이사 이관순)은 최근 HM95573에 대한 임상시험 승인 신청서를 식품의약품안전처에 제출하고, 내년부터 서울아산병원에서 흑색종 등 고형암 환자를 대상으로 임상 1상에 돌입한다고 5일 밝혔다.</p>
+<p>HM95573은 암세포 증식 및 성장에 관여하는 변이성 RAF 및 RAS 단백질을 선택적으로 강하게 억제하는 표적항암제로, 기존 약물에 반응하지 않거나 부작용이 큰 환자들에게 투여할 수 있는 2세대 RAF 저해제 약물로 개발되고 있다.</p>
+<p>한미약품은 이번 임상을 통해 고형암 환자에서 HM95573의 안전성과 내약성을 평가해 최대 내약용량 등을 결정하며 종양반응률, 최대 종양크기 변화율, 질병조절율 등을 관찰하게 된다.</p>
+<p>약물의 종양 반응과 관련한 시험 대상은 변이성 B-RAF, 변이성 K-RAS 및 변이성 N-RAS 단백질을 가지고 있는 흑색종, 대장암, 간암 또는 비소세포폐암 등 환자이다.</p>
+<p>한미약품 정진아 임상개발 담당이사는 “HM95573은 기존 항암제에서 반응하지 않는 환자들에게 투여할 수 있는 2세대 약물로 개발 중인 표적항암제“라며 “암으로 고통받는 환자들에게 혁신적인 치료제가 될 수 있도록 최선을 다해 개발하겠다“고 밝혔다.</p>
+<p>한편, 이번 HM95573 개발은 지난 2013년 6월부터 보건복지부의 ‘국산 희귀의약품 연구개발 과제’로 선정돼 보건의료기술연구개발사업의 지원을 받아 추진된 것이다.</p>
+<p>한미약품은 HM95573을 비롯해 암세포 성장에 관여하는 EGFR(상피세포성장인자) 돌연변이만을 선택적으로 억제하는 ‘HM61713’, EGFR 수용체의 신호전달을 차단하는 포지오티닙(Poziotinib) 등 3건의 표적항암제 파이프라인을 보유하고 있다. <a href="https://clinicaltrials.gov/ct2/show/NCT02405065" class="uri">https://clinicaltrials.gov/ct2/show/NCT02405065</a></p>
+<ul>
+<li>BRAF Mutant Melanoma Only -&gt; Vemurafenib, Dabrafenib</li>
+<li>FRET - measures signaling</li>
+<li>PD marker - efficacious dose = 300mg BID | MODELING | POP-PK</li>
+<li>expected efficacious exposure ~130k c.a</li>
+<li>Pan EFGR inhibitor or - Afatinib, Erlotinib - live in vivo imaging</li>
+<li>Summary - longitudinal in-vivo imaging</li>
+<li>28 programs | Total R&amp;D center : 493 [Q&amp;A] Companion diagnostics - targeting angiogenesis</li>
+</ul>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-
-<a href="section-2.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="cancer-immunotherapy.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="-fda-.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -261,7 +271,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/index.Rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-04-29-Bioimaging.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
