--- a/ConferencesBook/section-2.html
+++ b/ConferencesBook/section-2.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-
-<link rel="next" href="section-2.html">
+<link rel="prev" href="index.html">
+<link rel="next" href="-3.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -218,23 +218,25 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="header">
-<h1 class="title">Conferences 2016</h1>
-<h4 class="author"><em>Sungpil Han</em></h4>
-<h4 class="date"><em>2016-10-02</em></h4>
-</div>
-<div id="introduction" class="section level1">
-<h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
-<p>Conferences mainly regarding clinical pharmacology, pharmacometrics and medicine will be summarized here.</p>
-
+<div id="section-2" class="section level1">
+<h1><span class="header-section-number">Chapter 2</span> 심장내과</h1>
+<p>[Ekg] 정상 ekg 읽는 법. V1에서 S만 보여. 뭐지? 정상이 과장된 상태. LVH다.. LBBB wide qrs wpw - short pr lv infarct. ant Q, reciprocal. RBBB RVH WPW RIGHT. MI POST LBBB LVH WPW LEFT. MI ANT st elevation. pericarditis. normal male pattern T wave inversion. LBBB환자에서 T inv가 있는데 추후에 qrs방향과 맞게 바뀌었으면 infarct의심해야 한다.</p>
+<p>[Echo 송재관] 초음파 60년전. Long axis. Short axis. Apical view. Subxyphoid view. SAM. w LVOT. Pulsed doppler. 앵두같은 MS. 2.5Hz TTE. 해상도 높으면 penetration이 낮다. Effort chest pain.</p>
+<p>Cardiac CT 연세대 최병욱</p>
+<p>[Chest pain 연세의대] Stress test? 한번더 잘 생각해 보자… 특징적인 angina | atypical angina CCS angina. III,IV이상을 typical Resting angina | Increasing angina TMT? Treadmill test Non invasive risk stratification 위험군- ST depression at stage | Exercise induced VT/VF Early invasive diagnostic W/U | Strict warning 언제든지 잘못될 수 있다 !!! Arrest &amp; CPR - Careful hx -&gt; 실제로는 간단한 환자가 아니었어..!! NSTEMI (DM+HTN) !!! Early invasive - Resting angina | CHF symptoms, S3 gallop | EF&lt;40% | VT | Vital instability | TnT(+) | TIMI&amp;GRACE score가 높은 경우 쓰라리다. 욱신거린다. 하루종일 아파. 여기가 아파. (비전형적) VS 돌로 누른 듯 묵직. (전형적)</p>
+<p>괜찮은 줄 알았던 사람인데 알고보니 D-DIMER(+) -&gt; PTE 전혀 괜찮을 줄 알았는데 알고보니 Aortic dissection 게이 | 37남 | vasospastic angina? | 그러나 당일 오전 악화된 통증은? 갑자기 나타난 고혈압? | 이차성 고혈압??인가? | Renovascular -&gt; Aortic dissection….으로 최종 진단됨. class B Take home message - CT 찍는걸 주저하지 마라.</p>
+<p>김영탁 - 울산의대 “invasive and functional eval of IHD” 증상없으면 angiography or CT angio -&gt; inappropriate! 기능적 ischemia 침습적 검사 - Good|anatomic information, Tx+Dx vs Bad|hospitalization, cost FFR - 0.75이하이면 significant stenosis DEFER study-FFR&gt;0.75일때 - 괜찮아.. 이걸 근거로 PCI할 경우 생존율 증가. INCIDENCE 감소 FFR이 치료 방향을 결정해 준다. 성인 남자는 흉통이 있으면 TEST해야한다. INTERMEDIATE RISK라고 할 지라도.. 해봐야 한다. 젊은 여자는 안해도 돼. CARDIAC IMAGING - STRESS EKG못할 경우에 유용. 운동부하 심전도는 병변의 위치 알 수 없다. ANGINA 보다 PERFUSION의 감소는 먼저 DETECT 할 수 있다. Cardiac 엠알은 비싸고 관상동맥 보기엔 좋지 않다. !!! FFR-CT는 간접적이지만 Radiation적다. computational fluid dynamics. sensitivity(있으면 있다) 높다. specificity(없으면 없다) 낮다. 허혈 여부가 중요. SPECT가 많이 쓰이고 있다.</p>
+<p>[치료 - 협심증 - 울산의대 안정민] 약물치료 + 혈관재개통 또는 수술 | 딱 두가지다! !!! 안정형 협심증 - 약물이나 스텐트나 사망률은 완전히 같음 (7년) - 스텐트 할 필요 전혀 없음 !!! STICH - 수술과 모탈리티 차이 없어. ASPIRIN - CAD, CVA, CABG - REDUCTION OF DEATH Clopidogrel - death, MI, stroke ASA보다 낮춰줘야함. 출혈 경향은 좀더 크다. !!! DUAL ANTIPLATELET이 중요하다. BB - SA에서 좋다 ACEI - NO ANTI ANGINA EFFECT | HTN, DM, 신장기능 안좋을때 꼭 써야함. NITRATE - 심장에 인삼같은 약이다. BB,CCB와 함께 ANGINA완화함 STATIN - 굉장히 좋은 약. 필수적임. !!! OMT ( optimal medical Tx) - 1개 statin. BB. ACEi/ARB. 네개 꼭 써야한다!!! 50%도 안하고 있다. 잘 챙겨야 한다. 하지마라. - estrogen, Vit C, Vit A 등은 증거가 없고 해로울 수도 있다. 두단계 - 허벤, 베라파밀 Non-DHP CCB + BB -&gt; Statin TMT Gr3 잘 하면 약물. 1단계 페일하면 invasive !!! non invasive functional study 해야 한다. - risk stratification해서 약물치료 or 스텐트(수술)해야할지 !!! 조지 부시 - 증상 없는데 스텐트 해야할까? 안해도 된다. 현재 기준으로는 over-use stent 무분별한 CAG가 많으므로 증상없으면 안해도 돼. 저위험에서도 안해도 됌 ISCHEMIA연구 - CAG 없이 약물 혹은 혈관재개통? - 무엇이 좋을지… Everlorimus-eluting stent angiography뿐만 아니라 FFR guided PCI를 해야한다. FAME연구 - 스텐트 과다 사용을 낮춰준다. BRS - 몸에서 저절로 흡수되어 사라지는 스텐트 - 5년 뒤엔 완전히 없어져. PCI VS CABG | 단순병변 VS 복잡병원 (3VD, LM+2 OR 3VD) NIFS - NON INV FUNC STUDY (TMT,THALLIUM) - LOW(OMT) VS HIGH (CAG+OMT) - PCI, CABG</p>
+<p>[ACS UPDATED MANAGEMENT] 히드라 80세 이후엔 암으론 잘 안죽어. 혈관으로… !!! 레벨 A- ANTI PLT, STATIN, ANTI-HTN !!! !!! TROPONIN - 0.04가 기준이다!!! 애매하면 coronary CT 찍어라. -&gt; suspicious ACS at ER. 20분이상 STE. 2개 리드에서.. 10% | 20% | 10% - stemi|NSTEMI|UA P2Y12 - PLT ACTIVATION BLOCK - TICAGRELOR,PRASUGRL,CLOPIDOGREL(STEMI) IABP X 쓰지마라.(AMI with mechanical Cx-VSD) - NE!!!(LEVOPHED) - DOPAMINE 안쓴다. !!! TIMI쓰지마라. GRACE (ACS RISK SCORE 2.0)가 좋은거다!!! Time is Muscle. 5% mortality - door-to-door time 줄어도 동일하다. !!!! 환자가 빨리 와야된다. !!!! 혈전용해제는 뇌출혈 없으면 다 해야된다. !!! statin. dual. BB</p>
+<p>정리 Medical Tx가 중요하다! - survival rate를 높이는 스텐트는 제한적인 population에만 적용될 수 있다. 청진기보다 초음파보는게 중요한 시대가 왔다. 청진기가 필요없다. subjective Sx</p>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-
-<a href="section-2.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="-3.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -261,7 +263,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/index.Rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-03-10-Cardiology.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
