--- a/ConferencesBook/reference.html
+++ b/ConferencesBook/reference.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
+<link rel="prev" href="-clinical-research-science-expert-course-for-cutting-edge-drug-development.html">
 
-<link rel="next" href="section-2.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -218,23 +218,33 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="header">
-<h1 class="title">Conferences 2016</h1>
-<h4 class="author"><em>Sungpil Han</em></h4>
-<h4 class="date"><em>2016-10-02</em></h4>
-</div>
-<div id="introduction" class="section level1">
-<h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
-<p>Conferences mainly regarding clinical pharmacology, pharmacometrics and medicine will be summarized here.</p>
+<div id="reference" class="section level1">
+<h1><span class="header-section-number">Chapter 14</span> Reference</h1>
 
+<div id="refs" class="references">
+<div>
+<p>1. Lim H-S, Bae K-S (2014) Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke. The Journal of Clinical Pharmacology 55:458–466</p>
 </div>
+<div>
+<p>2. Lee JW, Kim Y, Perera V, McLachlan AJ, Bae K-S (2015) Prediction of plasma caffeine concentrations in young adolescents following ingestion of caffeinated energy drinks: A monte carlo simulation. European Journal of Pediatrics 174:1671–1678</p>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
             </section>
 
           </div>
         </div>
       </div>
+<a href="-clinical-research-science-expert-course-for-cutting-edge-drug-development.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
-<a href="section-2.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -261,7 +271,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/index.Rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/9999-99-99.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
