--- a/ConferencesBook/index.html
+++ b/ConferencesBook/index.html
@@ -25,7 +25,7 @@
 
 <meta name="author" content="Sungpil Han">
 
-<meta name="date" content="2016-10-02">
+<meta name="date" content="2016-10-14">
 
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
@@ -197,7 +197,28 @@ MathJax.Hub.Config({
 <li class="chapter" data-level="13.7.4" data-path="acrep.html"><a href="acrep.html#----"><i class="fa fa-check"></i><b>13.7.4</b> 국내 사례 소개 및 질의/응답</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="14" data-path="reference.html"><a href="reference.html"><i class="fa fa-check"></i><b>14</b> Reference</a></li>
+<li class="chapter" data-level="14" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html"><i class="fa fa-check"></i><b>14</b> The 2nd A3 Pharmacometrics Symposium</a><ul>
+<li class="chapter" data-level="14.1" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#young-scientist-session"><i class="fa fa-check"></i><b>14.1</b> Young Scientist Session</a><ul>
+<li class="chapter" data-level="14.1.1" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#modeling-of-mycoplasma-tuberculosis-biomarkders-for-cure"><i class="fa fa-check"></i><b>14.1.1</b> Modeling of mycoplasma tuberculosis biomarkders for cure</a></li>
+<li class="chapter" data-level="14.1.2" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#integrative-pkpd-modling-and-simulation-of-amenamevir-for-treatment-of-recurrent-genital-herpes"><i class="fa fa-check"></i><b>14.1.2</b> Integrative PKPD modling and simulation of Amenamevir for treatment of recurrent genital herpes</a></li>
+<li class="chapter" data-level="14.1.3" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#model-based-meta-analysis-to-quantify-and-compare-the-efficacy-of-non-hormonal-drugs-on-menopausal-hot-flashes"><i class="fa fa-check"></i><b>14.1.3</b> Model Based Meta-Analysis to quantify and compare the efficacy of non-hormonal drugs on menopausal Hot flashes</a></li>
+<li class="chapter" data-level="14.1.4" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#dosing-optimization-in-obesity-using-pharmacometrics-approach-population-pk-and-pd-of-meropenem-in-non-obese-obese-and-mobidly-obese-patients"><i class="fa fa-check"></i><b>14.1.4</b> Dosing optimization in obesity using pharmacometrics approach: population PK and PD of meropenem in non-obese, obese and mobidly obese patients</a></li>
+</ul></li>
+<li class="chapter" data-level="14.2" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#application-session"><i class="fa fa-check"></i><b>14.2</b> Application Session</a><ul>
+<li class="chapter" data-level="14.2.1" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#the-application-of-pharmacometrics-in-individual-therapy-in-china"><i class="fa fa-check"></i><b>14.2.1</b> The application of pharmacometrics in individual therapy in China</a></li>
+<li class="chapter" data-level="14.2.2" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#pd-model-fo-bayesian-prediction-of-myelosuppression-rpofiles-based-on-routine-clinical-data-after-gemcitabine-and-carboplatin-treatment"><i class="fa fa-check"></i><b>14.2.2</b> PD model fo Bayesian Prediction of myelosuppression rpofiles based on routine clinical data after gemcitabine and carboplatin treatment</a></li>
+<li class="chapter" data-level="14.2.3" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#modeling-and-validating-chronic-pharmacological-manupulation-of-circadian-rhythms"><i class="fa fa-check"></i><b>14.2.3</b> Modeling and validating chronic pharmacological manupulation of circadian rhythms</a></li>
+<li class="chapter" data-level="14.2.4" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#application-of-pkpd-modeling-and-simulation-in-antiviral-drug-development"><i class="fa fa-check"></i><b>14.2.4</b> Application of PK/PD modeling and simulation in antiviral drug development</a></li>
+<li class="chapter" data-level="14.2.5" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#pharmacometrics-in-clinical-practice-pop-pk-analysis-of-febuxostat-in-patients-with-severe-renal-impairment"><i class="fa fa-check"></i><b>14.2.5</b> pharmacometrics in clinical practice: pop PK analysis of febuxostat in patients with severe renal impairment</a></li>
+</ul></li>
+<li class="chapter" data-level="14.3" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#regulation"><i class="fa fa-check"></i><b>14.3</b> Regulation</a><ul>
+<li class="chapter" data-level="14.3.1" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#japan"><i class="fa fa-check"></i><b>14.3.1</b> Japan</a></li>
+<li class="chapter" data-level="14.3.2" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#korea"><i class="fa fa-check"></i><b>14.3.2</b> Korea</a></li>
+<li class="chapter" data-level="14.3.3" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#ema-regulations-on-meling-issues"><i class="fa fa-check"></i><b>14.3.3</b> EMA regulations on meling issues</a></li>
+<li class="chapter" data-level="14.3.4" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#recent-examples-of-impact-of-pharmacometrics-in-decision-making"><i class="fa fa-check"></i><b>14.3.4</b> Recent examples of impact of pharmacometrics in decision making</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="15" data-path="reference.html"><a href="reference.html"><i class="fa fa-check"></i><b>15</b> Reference</a></li>
 <li class="divider"></li>
 <li><a href="http://shanmdphd.github.io">Back to shanmdphd.github.io</a></li>
 
@@ -221,7 +242,7 @@ MathJax.Hub.Config({
 <div id="header">
 <h1 class="title">Conferences 2016</h1>
 <h4 class="author"><em>Sungpil Han</em></h4>
-<h4 class="date"><em>2016-10-02</em></h4>
+<h4 class="date"><em>2016-10-14</em></h4>
 </div>
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
