--- a/ConferencesBook/the-2nd-a3-pharmacometrics-symposium.html
+++ b/ConferencesBook/the-2nd-a3-pharmacometrics-symposium.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="-3.html">
-<link rel="next" href="bioimaging-2016-04-29.html">
+<link rel="prev" href="-clinical-research-science-expert-course-for-cutting-edge-drug-development.html">
+<link rel="next" href="reference.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -239,38 +239,223 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="cancer-immunotherapy" class="section level1">
-<h1><span class="header-section-number">Chapter 4</span> Cancer immunotherapy</h1>
-<p>Image</p>
-<p>Image 2016.04.04.Tue 대강당 지하1층</p>
-<p>Donor NK cell therapy for refractory acute leukemia - 이규형 (서울아산) - NK cell 조기에 줬더니 합병증 있었다. 열이 났다. weight gain Cytokine syndrome 그러나 착상은 잘 된다.<br />
-- bilirubin 올라가기도 했다. - 45명 -&gt; 33명이 cytokine syndrome 12명은 안생겨 (19명은 complete, 3명은 백혈병 나빠져, 3명은 multi organ failure로 사망) - ATG level은 낮아져. IL-15은 점차 상승해 - nkp40 receptor 낮으면 재발. - DN - CD56- : 1/1000이 아마 contaminating T cell이 있지 않을까? - Randomized study 하고 싶다. IIT에서 SIT로 하고 싶다.. - CAR NK 세포 1-2상 임상시험. (SIT) - Q) ALL이 성적이 나쁜 이유는 무엇? A) Tumor별로 다르다. 정도.. - Q) CAR NK를 공부하다보니 saline을 이용한 시도? A) 가능하구요.. shelf에서 꺼내 쓸 수 있어 장점인데 아직 모른다.. 오리무중 상태..</p>
-<p>Turning tumor mutations into personalized cancer therapies. - Roman Yalensky (Gritstone oncology) Genetic instability is a<br />
-- immune checkpoint inhibitors -&gt; CPI ground-breaking -<br />
-- Overall survival in NSCLC patients | docetaxel vs nivolumab (Anti-PD-1 mAb) - both are poor (24mo) - Question ) why? some are responsive others are non-responsive. - highest mutated cancer - mutations are relevant to CPI mechanism of actions (Rizvi 2015 Science) - TSNA first class of altered (non) self antigen | Non-self가 less risk of therapeutic failure due to immune tolerance (Tumor-specific net-antigens)<br />
-- Snyder 2014 NEJM<br />
-- IFNg+ T cell response - (mutation) - anti CTLA4 - Vaccine | Tumor infiltrating T cells are CD4 and Vb22+ - Bx-seqeunceing-manufacturing | personalized process - Nucleic acid | synthetic long peptide | virus | cellular - Selecting new antigen |<br />
-- HLA-IP/MS - 7/170(4%)<br />
-- &lt;1 in 20 predicted HLA-bound neoantigens are presented by tumors (Gros) - nature med 2016 <a href="http://www.nature.com/nm/journal/vaop/ncurrent/full/nm.4051.html" class="uri">http://www.nature.com/nm/journal/vaop/ncurrent/full/nm.4051.html</a><br />
-- Exome and T txTome &amp; tumor MS HLA peptide sequencing<br />
-- FFPE tissue specimens |</p>
-<p>Translational Research of immune-oncology in real world - 정헌 (MSD) - Immune monitoring 꼭 필요하다.<br />
-- MSD Oncology Medical Director - PD-1/PD-L1 pathway development (20년) Dr.Honjo가 발견 - ipilimumab (Mono) - melanoma 3y OS|~20% - Combination regimen (Optimal combination)<br />
-- Biomarker | Combination rationale | New immune modulator<br />
-- Enough resources + regulatory support + collaboration + clear objective + straightforward operation + agility flexibility + right IO target identification + irTME understanding + material archiving - responder group찾고 관련된 target, pathway를 찾는다.<br />
-- combinational - 400여개의 trial 이 이뤄지고 있다. coinhibitory보다 costimulatory가 훨씬 어렵다. - antiCD137, antiPD-1, antiOX40 - Keynote (biomarker)<br />
-- Hurdle - 1 Gap of immune related TME between human and animal | CD28 - mouse ? - 2 immune monitoring이 중요하다.<br />
-- 3 evaluation of CD8+ TEM cell - CD45RO+ memory(responder) - 4 Inadequate tissue quality and volume (20%가 necrosis, fibrosis) - 5 SOC discordance (US and Korea) - 6 different Ab or platform<br />
-- 7 FFPE - Gene expression signature - platform 찾아야. - 8 gap between leading countries and second runner in IO (US - 4 pathway segment, 9 products segment) - simple and easy to understand</p>
+<div id="the-2nd-a3-pharmacometrics-symposium" class="section level1">
+<h1><span class="header-section-number">Chapter 14</span> The 2nd A3 Pharmacometrics Symposium</h1>
+<p><strong>Harmonization of Regulatory view about Pharmacometrics and sharing experience on population approach</strong></p>
+<ul>
+<li>Date: 14th October, 2016 (Friday)</li>
+<li>Location: Teok-Seong-Hwa Hall (Room No. 413-1), College of Pharmacy (Building No. W6), Chungnam National University, Daejeon, Korea</li>
+<li>Sponsored by: PAGK, PAGJa and PCPC</li>
+</ul>
+<div class="figure">
+<img src="http://imgur.com/37iVQ" />
 
+</div>
+<div id="young-scientist-session" class="section level2">
+<h2><span class="header-section-number">14.1</span> Young Scientist Session</h2>
+<div id="modeling-of-mycoplasma-tuberculosis-biomarkders-for-cure" class="section level3">
+<h3><span class="header-section-number">14.1.1</span> Modeling of mycoplasma tuberculosis biomarkders for cure</h3>
+<ul>
+<li>speaker: Yookwhan Noh</li>
+</ul>
+<div id="introduction-1" class="section level4">
+<h4><span class="header-section-number">14.1.1.1</span> Introduction</h4>
+<ul>
+<li>mycobateria taxonomy
+<ul>
+<li>Myco. Tuberculosis</li>
+<li>MOTT</li>
+</ul></li>
+<li>VPC results impreved by several steps</li>
+<li>Model validation by <strong>bootstrap</strong></li>
+</ul>
+</div>
+<div id="gene-xpert" class="section level4">
+<h4><span class="header-section-number">14.1.1.2</span> Gene Xpert</h4>
+<ul>
+<li>ETA distribution from Xpert : Skewed to left.</li>
+</ul>
+</div>
+</div>
+<div id="integrative-pkpd-modling-and-simulation-of-amenamevir-for-treatment-of-recurrent-genital-herpes" class="section level3">
+<h3><span class="header-section-number">14.1.2</span> Integrative PKPD modling and simulation of Amenamevir for treatment of recurrent genital herpes</h3>
+<ul>
+<li>Akitsuga Takada</li>
+<li>HSV-1, HSV-2(Genital)</li>
+<li>PKPD analysis</li>
+</ul>
+</div>
+<div id="model-based-meta-analysis-to-quantify-and-compare-the-efficacy-of-non-hormonal-drugs-on-menopausal-hot-flashes" class="section level3">
+<h3><span class="header-section-number">14.1.3</span> Model Based Meta-Analysis to quantify and compare the efficacy of non-hormonal drugs on menopausal Hot flashes</h3>
+<ul>
+<li>Lujin Li (PCPC)</li>
+<li>Hot flashes - low levels of estrogen</li>
+<li>SSRI, SNRI, Gabapentin, clonidine</li>
+<li>Tx : HRT, Non-hormonal drugs - regulators of central neurotransmitters, phytoestrogens</li>
+<li>Lancet 2008 - limitation : speed of onset</li>
+<li>MBMA - useful (Model based meta analysis)</li>
+<li>Pubmed, cochrane library</li>
+<li>hot flash,</li>
+<li>Emax model 15,5,4,~ (39 studies)
+<ul>
+<li>The effects</li>
+</ul></li>
+<li>soy isoflavones</li>
+<li>Placebo</li>
+<li>run-in design is better.</li>
+</ul>
+</div>
+<div id="dosing-optimization-in-obesity-using-pharmacometrics-approach-population-pk-and-pd-of-meropenem-in-non-obese-obese-and-mobidly-obese-patients" class="section level3">
+<h3><span class="header-section-number">14.1.4</span> Dosing optimization in obesity using pharmacometrics approach: population PK and PD of meropenem in non-obese, obese and mobidly obese patients</h3>
+<ul>
+<li>Eun Kyung Chung (PAGK)</li>
+<li>PK model development</li>
+<li>Stepwise model development</li>
+<li>Covariate model building</li>
+<li>Model selection criteria : goodness of fit plots, RSE, OFV</li>
+<li>Structural CMT PK model</li>
+<li>observed conc - individual predicted concentration</li>
+<li>Visual predictive checks - quite good</li>
+<li>MIC - probability of target attainment</li>
+<li>PD analysis - CrCl&lt;50</li>
+</ul>
+</div>
+</div>
+<div id="application-session" class="section level2">
+<h2><span class="header-section-number">14.2</span> Application Session</h2>
+<div id="the-application-of-pharmacometrics-in-individual-therapy-in-china" class="section level3">
+<h3><span class="header-section-number">14.2.1</span> The application of pharmacometrics in individual therapy in China</h3>
+<ul>
+<li>speaker: Zheng Jiao (PCPC)</li>
+<li><a href="http://pkpd.kmu.edu.tw/jpkd/">Java PK for dashtop</a></li>
+<li>Bayesian Dose Estimation</li>
+<li>Drugs - Immunosuppressant, vanco, anti-epil</li>
+<li>Non adhereence in chronic disease</li>
+<li>individualized therapeutic range</li>
+<li>many dashboard systems in China</li>
+</ul>
+</div>
+<div id="pd-model-fo-bayesian-prediction-of-myelosuppression-rpofiles-based-on-routine-clinical-data-after-gemcitabine-and-carboplatin-treatment" class="section level3">
+<h3><span class="header-section-number">14.2.2</span> PD model fo Bayesian Prediction of myelosuppression rpofiles based on routine clinical data after gemcitabine and carboplatin treatment</h3>
+<ul>
+<li>speaker: Yoshitaka Yano (PAGJa)</li>
+<li>GEM, CDDP - PLT, RBC, WBC</li>
+<li>NM7.3 FOCE</li>
+<li>Bootstrap resampling / estimation</li>
+<li>Correlation plots of IPRED vs DV</li>
+<li>VPC - 90% predictive interval</li>
+</ul>
+</div>
+<div id="modeling-and-validating-chronic-pharmacological-manupulation-of-circadian-rhythms" class="section level3">
+<h3><span class="header-section-number">14.2.3</span> Modeling and validating chronic pharmacological manupulation of circadian rhythms</h3>
+<ul>
+<li>speaker: Jaekyung Kim(PAGK)</li>
+<li>Transcriptional negative clock</li>
+<li>Entrain.org</li>
+<li>sensitive to dosing timing, light</li>
+<li>180 variables</li>
+<li>Okazaki (2014), Symptom differs (2010)</li>
+</ul>
+</div>
+<div id="application-of-pkpd-modeling-and-simulation-in-antiviral-drug-development" class="section level3">
+<h3><span class="header-section-number">14.2.4</span> Application of PK/PD modeling and simulation in antiviral drug development</h3>
+<ul>
+<li>speaker: Kun Wang (PCPC)</li>
+<li>varal dynamic model</li>
+<li>HIV replication cycle</li>
+<li>Target - Virus - Infected cell</li>
+<li>T (CD4) I (Infected CD4)</li>
+<li>Lopinavir/Ritonavir (LPV/RTV)</li>
+<li>influenza - oseltamivir, oseltamivir carboxylate</li>
+</ul>
+</div>
+<div id="pharmacometrics-in-clinical-practice-pop-pk-analysis-of-febuxostat-in-patients-with-severe-renal-impairment" class="section level3">
+<h3><span class="header-section-number">14.2.5</span> pharmacometrics in clinical practice: pop PK analysis of febuxostat in patients with severe renal impairment</h3>
+<ul>
+<li>speaker: Daiki Hira</li>
+<li>Febuxostat - renal execretion + biliary</li>
+<li>Allopurinol -&gt; Oxypurinol - renal execretion</li>
+</ul>
+</div>
+</div>
+<div id="regulation" class="section level2">
+<h2><span class="header-section-number">14.3</span> Regulation</h2>
+<div id="japan" class="section level3">
+<h3><span class="header-section-number">14.3.1</span> Japan</h3>
+<ul>
+<li>speaker: Yusuke Tanigawara (PAGJa)</li>
+<li>Structural, Error, Covariate model</li>
+<li>Model diagnosis - 각 스텝마다 해야 된다.</li>
+<li>Model qualification(or evaluation / validation)이 중요하다. Final stage -&gt; Bootstrap, External validation, VPC</li>
+</ul>
+</div>
+<div id="korea" class="section level3">
+<h3><span class="header-section-number">14.3.2</span> Korea</h3>
+<ul>
+<li>speaker: Howard Lee (PAGK)</li>
+<li>의약품 개발 시 집단 약동학 활용</li>
+<li>Dose optimization and ethnic bridging</li>
+<li>Technical pharmacometrics trap</li>
+<li>Impact</li>
+<li>Technical modelling</li>
+</ul>
+</div>
+<div id="ema-regulations-on-meling-issues" class="section level3">
+<h3><span class="header-section-number">14.3.3</span> EMA regulations on meling issues</h3>
+<ul>
+<li>speaker: Jaewoo Kim (PAGK)</li>
+<li>Guidance for industry</li>
+</ul>
+</div>
+<div id="recent-examples-of-impact-of-pharmacometrics-in-decision-making" class="section level3">
+<h3><span class="header-section-number">14.3.4</span> Recent examples of impact of pharmacometrics in decision making</h3>
+<ul>
+<li>speaker: Jee Eun Lee (USA)</li>
+<li>Parieotide - somatostatin analogue (high affinity for sstr5) -&gt; somatostatin analogue (Novartis)</li>
+<li>600ug BID failed to meet the pre-specified primary efficacy endpoint</li>
+<li>Flat E-R for efficacy / steep E-R for hyperglycemia</li>
+<li>Good for some - urine cortisol high patients</li>
+</ul>
+<div id="secukinumab" class="section level4">
+<h4><span class="header-section-number">14.3.4.1</span> Secukinumab</h4>
+<ul>
+<li>Chronic Plaque Psoriasis</li>
+<li>Interindividual variability (PD, PK)</li>
+<li>Secukinumab (Cosentyx) - target population</li>
+<li><a href="https://en.wikipedia.org/wiki/Secukinumab" class="uri">https://en.wikipedia.org/wiki/Secukinumab</a> (Novartis)</li>
+<li>Example of dose optimization</li>
+<li>Body weight - significant covariate - conc decreases with body weight (stratified by 90kg)</li>
+<li>Conc are higher in patients &lt; 90kg</li>
+<li>90kg 이상의 사람에게 150mg 추가 용량을 투여하는게 적합한가?</li>
+<li>IL-17(A) - Etanercept, infliximab, adalimumab(humira, shallow), ustekinumab = biologics</li>
+<li>IgA, 4 Phase III, (2 of them were pivotal study)</li>
+<li>PMC - post marketing commitment</li>
+<li>the higher conc. =&gt; the higher incidence of infections (tolerable)</li>
+</ul>
+</div>
+<div id="edoxaban--" class="section level4">
+<h4><span class="header-section-number">14.3.4.2</span> Edoxaban (흥미로운 약물)</h4>
+<ul>
+<li>NOAC - New Oral Anti-coagulants (4th)</li>
+<li>1st rivaroxaban, 2nd dabigatran(issue-EMA), 3rd apixaban</li>
+<li>Ace Meeting?</li>
+<li>Normal - Mild - Moderate</li>
+<li>Exposure - response relationships (Efficacy-Stroke, safety-bleeding)</li>
+<li>Benefir-risk relationship is not novel. (Dabigatran: RE-LY trial)</li>
+<li>exposure-response relationship PK matching.</li>
+</ul>
+
+</div>
+</div>
+</div>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-<a href="-3.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="bioimaging-2016-04-29.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="-clinical-research-science-expert-course-for-cutting-edge-drug-development.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="reference.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -297,7 +482,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-03-20-Cancer-Immunotherapy.Rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-10-14-A3PS.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
