--- a/ConferencesBook/the-2nd-a3-pharmacometrics-symposium.html
+++ b/ConferencesBook/the-2nd-a3-pharmacometrics-symposium.html
@@ -248,7 +248,7 @@ MathJax.Hub.Config({
 <li>Sponsored by: PAGK, PAGJa and PCPC</li>
 </ul>
 <div class="figure">
-<img src="http://imgur.com/37iVQ" />
+<img src="http://i.imgur.com/L5sx5As.jpg" />
 
 </div>
 <div id="young-scientist-session" class="section level2">
@@ -443,6 +443,7 @@ MathJax.Hub.Config({
 <li>Exposure - response relationships (Efficacy-Stroke, safety-bleeding)</li>
 <li>Benefir-risk relationship is not novel. (Dabigatran: RE-LY trial)</li>
 <li>exposure-response relationship PK matching.</li>
+<li>Identifying covariates prior to Phase 3</li>
 </ul>
 
 </div>
